# ZamSync

./: .all-contributorsrc  .gitattributes  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  ROADMAP.md  tmp_pr_body.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: build-release.yml  ci.yml  e2e-network.yml  pages.yml  release.yml
crates/zamsync-core/: Cargo.toml
crates/zamsync-core/src/: event.rs  lib.rs  sync.rs  validation.rs
crates/zamsync-network/: Cargo.toml
crates/zamsync-network/src/: lib.rs  tls.rs
crates/zamsync-storage/: Cargo.toml
crates/zamsync-storage/src/: encryption.rs  engine.rs  lib.rs  state.rs  sync_session.rs
crates/zamsync-storage/tests/: convergence_test.rs  sync_test.rs
crates/zamsync-testing/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  cli-ping.md  cli-reference.md  contributing.md  error-codes.md  getting-started.md  integration.md  introduction.md
src/: color.rs  main.rs  metrics.rs  util.rs
src/cmd/: audit.rs  bench.rs  compact.rs  daemon.rs  expire.rs  info.rs  keygen.rs  mod.rs  ping.rs  project.rs  project_pg.rs  rekey.rs  serve.rs  setup.rs  sign.rs  snapshot.rs  submit.rs  sync.rs
tests/: cli_integration.rs  docker-compose.network.yml  network_scenario.sh  prometheus.yml  report.py  security_access_test.sh
vagrant/: README.md  Vagrantfile
vagrant/ansible/: inventory.ini
vagrant/scripts/: bootstrap.sh  scenario.sh
(+22 files in other folders)
